# buzzer

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  format.sh  go.mod  go.sum  main.go
.github/workflows/: ci.yml  lint.yml
docs/architecture/: architecture.md
docs/guides/: running_with_coverage.md
ebpf_ffi/: .ebpf.cc.swp  BUILD  cbpf.cc  cbpf.h  ebpf.cc  ebpf.h  ffi.cc  ffi.h
pkg/: BUILD
pkg/cbpf/: BUILD  alu_instructions.go  alu_instructions_test.go  constants.go  instruction_generators.go  jmp_instructions.go  jmp_instructions_test.go  st_ld_instructions.go  st_ld_instructions_test.go
pkg/ebpf/: BUILD  alu_instructions.go  alu_instructions_test.go  alu_operations.go  alu_operations_test.go  base_structures.go  btf.go  constants.go  encoding_functions.go  generation_utils.go  instruction_generators.go  instruction_helpers_test.go  instruction_sequence.go  jmp_instructions.go  jmp_instructions_test.go  jmp_operations.go  jmp_operations_test.go  operation.go  poc_generator.go  program.go  program_test.go  st_ld_instructions.go  st_ld_instructions_test.go  st_ld_operations.go  st_ld_operations_test.go
pkg/metrics/: BUILD  metrics_server.go  metrics_unit.go
pkg/rand/: BUILD  rand.go
pkg/strategies/: BUILD  base.go  cbpf_playground.go  cbpf_random_instruction.go  coverage_based.go  heap.go  heap_test.go  loop_pointer_arithmetic.go  playground.go  pointer_arithmetic.go
proto/: BUILD  btf.proto  cbpf.proto  ebpf.proto  ebpf_fuzzer.proto  ffi.proto  program.proto
tools/: BUILD  ffi.go  loader.cc  minimizer.go
(+39 files in other folders)
