module(
    name = "buzzer",
    version = "0.3.0",
    repo_name = "buzzer",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@buzzer//:go.mod")
use_repo(
    go_deps,
    "com_github_go_echarts_go_echarts_v2",
    "com_github_golang_protobuf",
    "com_github_google_safehtml",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.22.4",
)

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk,
    "go_toolchains",
)
